--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
     "@hookform/resolvers": "^3.3.3",
     "@mui/material": "^5.15.2",
     "next": "14.0.4",
